--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -33,7 +33,7 @@
   <div class="span6">
     <ul class="nav nav-pills">
       <% if user_signed_in? %>
-        <li class="pull-right"><%= link_to destroy_user_session_path, :method => :delete do %><%= current_user.email %> - <i class='icon-off'></i>Wyloguj się<%end%></li>
+        <li class="pull-right"><%= link_to destroy_user_session_path, :method => :delete do %><%= current_user.email %> - <i class='icon-off'></i>&nbsp;Wyloguj się<%end%></li>
       <% end %>
     </ul>
   </div>
