--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -27,8 +27,12 @@
   <thead>
     <tr>
       <th colspan="3"></th>
-      <th colspan="<%= @categories_income.count %>" class="balance-label">Saldo początkowe:</th>
-      <th colspan="2" class="balance" id="initial-balance"><%= @journal.initial_balance %></th>
+      <th colspan="<%= @categories_income.count %>" class="balance-label">Saldo początkowe (w tym 1%):</th>
+      <th colspan="2" class="balance" id="initial-balance">
+        <%= number_with_precision(@journal.initial_balance, :precision => 2) %> zł
+        (<%= number_with_precision(@journal.initial_balance_one_percent, :precision => 2) %> zł)
+      </th>
+
       <th colspan="<%= @categories_expense.count %>"></th>
     </tr>
 
@@ -73,7 +77,16 @@
         </td>
       <% end %>
 
-      <td class="income income_all text-right"><small><%= entry.is_expense ? "-" : entry.sum %></small></td>
+      <td class="income income_all text-right">
+        <small>
+        <% if entry.is_expense
+            concat "-"
+           else
+            print_formatted_amount(entry.sum)
+           end
+        %>
+        </small>
+      </td>
 
       <td class="expense expense_all text-right">
         <small>
@@ -129,6 +142,16 @@
           </small>
         </td>
       <% end %>
+    </tr>
+
+    <tr>
+      <th colspan="3"></th>
+      <th colspan="<%= @categories_income.count %>" class="balance-label">Saldo końcowe (w tym 1%):</th>
+      <th colspan="2" class="balance" id="initial-balance">
+        <%= number_with_precision(@journal.get_final_balance, :precision => 2) %> zł
+        (<%= number_with_precision(@journal.get_final_balance_one_percent, :precision => 2) %> zł)
+      </th>
+      <th colspan="<%= @categories_expense.count %>"></th>
     </tr>
   </tfoot>
 </table>
