--- a/app/views/user_group_associations/_form.html.erb
+++ b/app/views/user_group_associations/_form.html.erb
@@ -12,11 +12,16 @@
   <% end %>
 
   <div class="field">
-    Użytkownik: <%= @user_group_association.user.email %>
+    Użytkownik: <%= @user_group_association.user.email %><%= f.hidden_field :user_id, :value => @user_group_association.user_id %>
   </div>
   
   <div class="field">
-  	Grupa: <%= @user_group_association.group.name %>
+  	Grupa: 
+  	<% if params[:action] == "edit" %>
+      <%= @user_group_association.group.name %><%= f.hidden_field :group_id, :value => @user_group_association.group_id %>
+    <% else %>
+      <%= f.collection_select(:group_id, @groups, :id, :name) %>
+    <% end %>
   </div>
 
   <div class="field">
