--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,19 +18,13 @@ table.users tr.invited td { color: #aaa; }
     <td><%= I18n.t(user.status) %></td>
     <td><%= user.is_superadmin ? "TAK" : "nie" %></td>
     <td><%= user.is_blocked ? "TAK" : "nie" %></td>
-    <td><%= link_to 'Pokaż', user %></td>
-    <% if can? :update, User %>
-      <td><%= link_to 'Edytuj', edit_user_path(user) %></td>
-    <% end %>
-    <% if can? :destroy, User %>
-      <td><%= link_to 'Usuń', user, confirm: 'Na pewno usunąć użytkownika?', method: :delete %></td>
-    <% end %>
+    <td><% if can? :read, user %><%= link_to 'Pokaż', user %><% end %></td>
+    <td><% if can? :update, user %><%= link_to 'Edytuj', edit_user_path(user) %><% end %></td>
+    <td><% if can? :destroy, user %><%= link_to 'Usuń', user, confirm: 'Na pewno usunąć użytkownika?', method: :delete %><% end %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<% if can? :create, User %>
-<%= link_to "Nowy użytkownik", new_user_path, :accesskey => 'N' %>
-<% end %>
+<% if can? :create, User %><%= link_to "Nowy użytkownik", new_user_path, :accesskey => 'N' %><% end %>
