--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -19,16 +19,6 @@
         </ul>
       </li>
 
-    </ul>
-  </div>
-</div>
-
-<div class="row">
-  <div class="span6">
-    <%= yield :journal_select %>
-  </div>
-  <div class="span6">
-    <ul class="nav nav-pills">
       <% if user_signed_in? %>
         <li class="pull-right">
           <%= link_to destroy_user_session_path, :method => :delete, class: "muted" do %>
@@ -36,6 +26,17 @@
           <%end%>
         </li>
       <% end %>
+
     </ul>
+  </div>
+</div>
+
+<div class="row">
+  <div class="span6">
+  </div>
+  <div class="span6">
+    <div class="pull-right">
+      <%= yield :journal_select %>
+    </div>
   </div>
 </div>
