--- a/app/views/user_unit_associations/_form.html.erb
+++ b/app/views/user_unit_associations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user_unit_association, :url => { :action => "update", :from => params[:from] }) do |f| %>
+<%= form_for(@user_unit_association, :url => { :action => @user_unit_association.new_record? ? "create" : "update" , :from => params[:from] }) do |f| %>
   <% if @user_unit_association.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user_unit_association.errors.count, "error") %> prohibited this user-unit association from being saved:</h2>
@@ -12,12 +12,17 @@
   <% end %>
 
   <div class="field">
-    Użytkownik: <%= @user_unit_association.user.email %><%= f.hidden_field :user_id, :value => @user_unit_association.user_id %>
+    Użytkownik:
+    <% if params[:action] == "edit" || params[:user_id] %>
+      <%= @user_unit_association.user.email %><%= f.hidden_field :user_id, :value => @user_unit_association.user_id %>
+    <% else %>
+      <%= f.collection_select(:user_id, @users, :id, :email) %>
+    <% end %>
   </div>
   
   <div class="field">
-  	Jednostka: 
-  	<% if params[:action] == "edit" %>
+    Jednostka: 
+    <% if params[:action] == "edit" || params[:unit_id] %>
       <%= @user_unit_association.unit.name %><%= f.hidden_field :unit_id, :value => @user_unit_association.unit_id %>
     <% else %>
       <%= f.collection_select(:unit_id, @units, :id, :name) %>
