--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Edycja grupy drużyn</h1>
+<h1>Edycja grupy jednostek</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Anuluj', @group %> |
-<%= link_to 'Lista', groups_path %>
+<%= link_to 'Anuluj', @group %>
