--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New group</h1>
+<h1>Nowa grupa jednostek</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Anuluj', groups_path %>
