--- a/app/views/user_group_associations/_form.html.erb
+++ b/app/views/user_group_associations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user_group_association) do |f| %>
+<%= form_for(@user_group_association, :url => { :action => @user_group_association.new_record? ? "create" : "update" , :from => params[:from] }) do |f| %>
   <% if @user_group_association.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user_group_association.errors.count, "error") %> prohibited this user-group association from being saved:</h2>
@@ -12,12 +12,17 @@
   <% end %>
 
   <div class="field">
-    Użytkownik: <%= @user_group_association.user.email %><%= f.hidden_field :user_id, :value => @user_group_association.user_id %>
+    Użytkownik:
+    <% if params[:action] == "edit" || params[:user_id] %>
+      <%= @user_group_association.user.email %><%= f.hidden_field :user_id, :value => @user_group_association.user_id %>
+    <% else %>
+      <%= f.collection_select(:user_id, @users, :id, :email) %>
+    <% end %>
   </div>
   
   <div class="field">
   	Grupa: 
-  	<% if params[:action] == "edit" %>
+  	<% if params[:action] == "edit" || params[:group_id] %>
       <%= @user_group_association.group.name %><%= f.hidden_field :group_id, :value => @user_group_association.group_id %>
     <% else %>
       <%= f.collection_select(:group_id, @groups, :id, :name) %>
@@ -42,6 +47,10 @@
 
   <div class="field">
   	Może zarządzać jednostkami: <%= f.check_box :can_manage_units %>
+  </div>
+
+  <div class="field">
+  	Może zarządzać grupami: <%= f.check_box :can_manage_groups %>
   </div>
   
   <div class="actions">
