--- a/app/views/user_group_associations/new.html.erb
+++ b/app/views/user_group_associations/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Powrót', user_path(@user_group_association.user) %>
+<%= link_to 'Anuluj', params[:from] == "group" ? @user_group_association.group : @user_group_association.user %>
